Fix modal width so that navigation dots do not spill over

--- a/templates/products/products.css
+++ b/templates/products/products.css
@@ -118,7 +118,7 @@
     max-width: 900px;
     max-height: 600px;
     transition: width 0.1s ease-out, height 0.1s ease-out, margin-left 0.1s ease-out, margin-top 0.1s ease-out;
-
+    min-width: 400px;
     .image-modal-content:hover .carousel-nav {
         opacity: 1;
     }
@@ -149,15 +149,22 @@
             z-index: 1;
             transition: transform 0.5s ease-in-out;
 
-            .slide img {
+            .slide {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
+
+                img {
                     width: 100%;
                     height: auto;
-                    object-fit: cover;
+                    object-fit: contain;
                     visibility: visible;
                     zoom: 1;
                     opacity: 1;
                     max-width: 100%;
                     max-height: 100%;
+                }
             }
         }
 
@@ -224,4 +231,10 @@
     opacity: 0.5;
     z-index: 9998;
     filter: alpha(opacity=50);
+}
+
+@media (width < 900px) {
+    .image-modal {
+        min-width: 300px;
+    }
 }
